--- a/styles/defensio.css
+++ b/styles/defensio.css
@@ -214,6 +214,13 @@ p#defensio_quarantine_empty {
   text-align:center;
 }
 
+div.malicious-comment{
+  background: red;
+  padding: 2px;
+  width: 70px;
+  color: white;
+  font-weight: bold;
+}
 span.defensio_more_details a {
 /*  color: #cccccc;*/
 /*  font-size: 7pt;*/
