--- a/styles/defensio.css
+++ b/styles/defensio.css
@@ -5,29 +5,29 @@ ul.defensio_comments {
 	margin-bottom: 2px;
 }
 
-ul.defensio_comments li {
+tr {
   padding: 1px 0 1px 0;
   margin: 2px 0 2px 0;
 }
 
-ul.defensio_comments li.defensio_check_all {
+tr.defensio_check_all {
 	margin: 15px 0 5px 5px;
 }
 
-ul.defensio_comments ul.defensio_comment_group {
-  list-style: none;
-  padding: 0;
+
+tr.defensio_comment_group {
+  background-color: #f8f8f8;
 }
 
-ul.defensio_comments ul.defensio_comment_group li.defensio_post_title {
-  font-size: 12pt;
+tr.defensio_comment_group td {
+  font-size: 9pt;
   font-weight: bold;
-  padding: 10px 0 7px 10px;
-  background-color: #e1e1e1;
+  padding: 7px 0 7px 10px;
+
 }
 
-ul.defensio_comments ul.defensio_comment_group li.defensio_post_title span {
-  font-size: 8pt;
+tr.defensio_comment_group span {
+  font-size: 7pt;
   font-weight: normal;
 }
 
@@ -40,7 +40,7 @@ p.hide_obvious_spam {
 }
 
 
-ul.defensio_comments li li {
+tr li {
 	padding: 8px;
 }
 
@@ -48,23 +48,21 @@ ul.defensio_comments p {
   margin: 5px 5px 5px 20px;
 }
 
-ul.defensio_comments li p.defensio_body_shrunk {
-  height: 17px;
+tr td p.defensio_body_shrunk {
+  height: 4em;
   margin-bottom: 10px;
   overflow: hidden;
-  font-size: 9pt;
 }
 
-ul.defensio_comments li p.defensio_body_expanded {
-  margin-bottom: 10px;
-  font-size: 9pt;    
+tr td p.defensio_body_expanded {
+  margin-bottom: 39px;  
 }
 
-ul.defensio_comments li span.defensio_comment_header {
+tr span.defensio_comment_header {
   font-weight: bold;
 }
 
-ul.defensio_comments li p.defensio_comment_meta {
+tr p.defensio_comment_meta {
   filter:alpha(opacity=75);
   -moz-opacity:.75;
   opacity:.75;
@@ -75,44 +73,44 @@ li p.defensio_comment_meta a.defensio_quarantine_action {
   font-weight: bold;
 }
 
-ul.defensio_comments li.defensio_spam0 {
+tr.defensio_spam0 {
   background-color: #ffffff;
   border-bottom: 1px solid #ccc;
 }
 
-ul.defensio_comments li.defensio_spam1 {
+tr.defensio_spam1 {
   background-color: #faf0e1;
 }
 
-ul.defensio_comments li.defensio_spam2 {
+tr.defensio_spam2 {
   background-color: #faebd4;
 }
 
-ul.defensio_comments li.defensio_spam3 {
+tr.defensio_spam3 {
   background-color: #fae6c8;
 }
 
-ul.defensio_comments li.defensio_spam4 {
+tr.defensio_spam4 {
   background-color: #fae1bb;
 }
 
-ul.defensio_comments li.defensio_spam5 {
+tr.defensio_spam5 {
   background-color: #fadcaf;
 }
 
-ul.defensio_comments li.defensio_spam6 {
+tr.defensio_spam6 {
   background-color: #fad7a2;
 }
 
-ul.defensio_comments li.defensio_spam7 {
+tr.defensio_spam7 {
   background-color: #fad296;
 }
 
-ul.defensio_comments li.defensio_spam8 {
+tr.defensio_spam8 {
   background-color: #facd89;
 }
 
-ul.defensio_comments li.defensio_spam9 {
+tr.defensio_spam9 {
   background-color: #fac87d;
 }
 
@@ -216,10 +214,20 @@ p#defensio_quarantine_empty {
   text-align:center;
 }
 
+span.malicious_label {
+  background: red;
+  padding: 2px;
+  color: white;
+  font-weight: bold;
+  font-size: 8pt;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+
 span.defensio_more_details a {
-  color: #cccccc;
-  font-size: 7pt;
-  text-decoration: none;
+/*  color: #cccccc;*/
+/*  font-size: 7pt;*/
+/*  text-decoration: none;*/
 }
 
 /* For warning boxes */
